# recommendation-engine

./: .dockerignore  .env.example  .env.performance  .env.test  .gitignore  CI_CD_QUICKSTART.md  CI_FIX_SUMMARY.md  COMPILATION_NOTE.md  CONFIG_INTEGRATION_GUIDE.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_REVIEW.md  Dockerfile  EXECUTION_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPROVEMENT_RECOMMENDATIONS.md  INTEGRATION_TESTS.md  OPTIMIZATION_REPORT.md  PERFORMANCE_TESTING_GUIDE.md  PERFORMANCE_TEST_REPORT.md  PERFORMANCE_TEST_RESULTS.md  PERFORMANCE_TEST_RESULTS_FINAL.md  PERFORMANCE_VALIDATION.md  QUICK_START_PERFORMANCE.md  QUICK_WINS_SUMMARY.md  README.md  SCALED_PERFORMANCE_RESULTS.md  SECURITY_REVIEW.md  TASK_10_IMPLEMENTATION.md  TASK_11_FINAL_VERIFICATION.md  TASK_11_IMPLEMENTATION.md  TASK_11_TEST_RESULTS.md  TASK_18_IMPLEMENTATION.md  TASK_28_CI_CD_IMPLEMENTATION.md  TASK_2_IMPLEMENTATION.md  TASK_30_2_READINESS_SHUTDOWN.md  TASK_31_3_METRICS_IMPLEMENTATION.md  TASK_32_1_IMPLEMENTATION.md  TASK_32_2_FINAL_STATUS.md  (+27 more)
.cargo/: config.toml
.github/workflows/: coverage.yml  docker.yml  release.yml  security.yml  test.yml
.sqlx/: query-08d9502d21ed8bb0a04c7d9d99dde3835a84af75148cb5f45b7f950788a057e3.json  query-26b2881ef091de1369ae9751407d0a43fa9fd5e5b3ac5f8bc3c01792a4598912.json  query-33bac5bd525581e976a0c27bab7f7cbd106905d2ec96486d7bf730d4a7a41c49.json  query-42a3f9b2cb86521a0ffeba1dff32f87d49107359cb25c2ec6c63b2cb107cb41c.json  query-510d80bfe601164270d28c7c92debb33c81e5aad16f68288bb4faa470f63ee99.json  query-614ea781b0650587774f1bcbf4700561ace08cd5bd63efd81950f2c31378c06d.json  query-6a4333e921575d788de3ed6a3dced3ab74099ce72f7b95895f54febb67e7d671.json  query-74f617bafc5209d7bd57b7636e8c11d87b6657706042568b9f5c5bcdc58d7de3.json  query-7bcc3fa4f01fbb78096bba89d9ca528f713e35f42280f05fcded6565050dcf4b.json  query-9a6ab09f02495ccf8d39e6f76606f72b1435925755dc2a276e948aac3d5885e3.json  query-c264d36df304be60f6ecbdbad59a2574d7b93d7405c63ed620de9a80bc551ce6.json  query-c4a8cf3699fe9184947cc142f98d6646b33a7a7ce8fbda468207972e81c3262f.json  query-cbb1a7f0c58608198fb92417c5bbb03570ae42d07af11a2a81f1bfbce7bc7eb6.json  query-d1b9e55d130ccc261d786f2239d63a97ea4f7cb7ea31d5d3b619a4e03f9ff5cc.json  query-e23e8597adfca9a5628dfcd91c00bdf16e2f188e10f90c5c9409bbde22185854.json  query-fd41225fc994b068f399a6203291886ec83d798c28fccc781cf1a70b40f1805a.json
argocd/: README.md  application-dev.yaml  application-prod.yaml  application.yaml
clients/: README.md
clients/python/: .gitignore  CHANGELOG.md  LICENSE  README.md  VALIDATION_REPORT.md  pyproject.toml  validate.py
clients/python/examples/: basic_usage.py  e_commerce.py
clients/python/src/recommendation_engine_client/: __init__.py  client.py  exceptions.py  types.py
clients/python/tests/: test_client.py
clients/typescript/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
clients/typescript/examples/: basic-usage.ts
clients/typescript/src/: client.test.ts  client.ts  index.ts  types.test.ts  types.ts
crates/api/: Cargo.toml
crates/api/src/: dto.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics_middleware.rs  middleware.rs  routes.rs  state.rs
crates/api/src/handlers/: entity.rs  export.rs  health.rs  interaction.rs  interaction_type.rs  recommendation.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: config.rs  error.rs  lib.rs  loader.rs  tenant.rs  watcher.rs
crates/engine/: Cargo.toml
crates/engine/src/: collaborative.rs  content_based.rs  feature_extractor.rs  hybrid.rs  lib.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: README.md  basic_connectivity_test.rs  integration_test.rs
crates/models/: Cargo.toml  TEST_COVERAGE.md
crates/models/src/: entity.rs  error.rs  feature_extractor.rs  interaction.rs  interaction_type_registry.rs  lib.rs  recommendation.rs  tenant.rs  user_profile.rs
crates/performance-tests/: Cargo.toml  README.md
crates/performance-tests/src/: main.rs
crates/seed-data/: Cargo.toml  QUICKSTART.md  README.md
crates/seed-data/src/: main.rs
crates/service/: Cargo.toml
crates/service/src/: entity.rs  interaction.rs  interaction_type.rs  lib.rs  model_updater.rs  recommendation.rs  webhook.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: cache.rs  database.rs  lib.rs  migrations.rs  vector_store.rs
docs/: README.md
docs/api/: widget-api.md
docs/examples/: recipes.md
docs/guides/: quick-start.md  react.md  theming.md
helm/recommendation-engine/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/recommendation-engine/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml.template  service.yaml
migrations/: 20250120000002_create_entities_table.sql  20250120000003_create_interactions_table.sql  20250120000004_create_user_profiles_table.sql  20250120000005_create_trending_entities_table.sql  20250120000006_create_interaction_types_table.sql
nuxt-module/: README.md  build.config.ts  eslint.config.mjs  package.json  tsconfig.json
nuxt-module/playground/: nuxt.config.ts
nuxt-module/playground/pages/: index.vue
nuxt-module/src/: module.ts
shopify-app/: .env.example  README.md  package.json  shopify.app.toml
shopify-app/prisma/: schema.prisma
shopify-app/server/: db.server.ts  index.ts
widget/: .gitignore  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
widget-react/: README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
widget-react/src/: index.ts  types.ts
widget-vue/: README.md  package.json  tsconfig.json  vite.config.ts
widget-vue/src/: index.ts  types.ts
widget/src/: api.ts  config.ts  index.ts  realtime.ts  types.ts
wordpress-plugin/grooveshop-recommendations/: README.txt  grooveshop-recommendations.php
(+38 files in other folders)
