[package]
name = "recommendation-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Configuration
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

# File watching for hot-reload
notify = { workspace = true }

# YAML/TOML parsing
serde_yaml = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
