[package]
name = "recommendation-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
recommendation-storage = { path = "../storage" }
recommendation-models = { path = "../models" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
chrono.workspace = true

# Observability
tracing.workspace = true
