[package]
name = "recommendation-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Workspace dependencies
recommendation-models = { path = "../models" }
recommendation-storage = { path = "../storage" }
recommendation-service = { path = "../service" }
recommendation-engine = { path = "../engine" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
chrono.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
sqlx.workspace = true
