[package]
name = "recommendation-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
chrono.workspace = true

# Validation
validator.workspace = true

# Database types
sqlx.workspace = true
